--- a/data/stories.yml
+++ b/data/stories.yml
@@ -75,7 +75,7 @@ stories:
 # ===============================
 # HISTORIAS DEL MOTOR DIFUSO - CORREGIDAS
 # ===============================
-- story: consulta tiempo de espera actual
+- story: consulta tiempo de espera actual (difuso)
   steps:
   - user: |
       ¿Cuánto voy a esperar?
